# k8s-ml

./: Dockerfile  Dockerfile.debug  README.md  main.py  playground.ipynb  pod-debug.yaml  pod-fastapi-1.yaml  pod-fastapi-2.yaml  pyproject.toml  role_binding.yaml
k8s/config-maps/: fastapi-1.yaml  fastapi-2.yaml
k8s/deployments/: fastapi-2.yaml
k8s/hpas/: fastapi-2.yaml
k8s/replica-sets/: fastapi-1.yaml
k8s/services/: fastapi-1.yaml  fastapi-2.yaml
